added some info in the footer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </main>
 
   <footer>
-    <p>© 2024 Smart Wallet Inc. | <a href="#privacy-policy">Privacy Policy</a></p>
+    <p>© 2024 Smart Wallet Inc. | Designed By Soumyadip Dhara, Triniket Maiti, Yeasa Mondal, Sweta Rajak | <a href="#privacy-policy">Privacy Policy</a></p>
   </footer>
 </body>
 </html>
